[package]
name = "vault-hunter"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2021"

[dependencies]
toml = ">=0.5"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
reqwest = { version = ">=0.11", features = ["json"] }
tokio = { version = ">=1", features = ["rt-multi-thread", "macros"] }
rpassword = ">=7.0"
clap = "~2"
quick-xml = ">=0.23"
chrono = ">=0.4"
